# party

./: .gitignore  AUTHORS  ChangeLog  Party_模型原理與中文處理解析.ipynb  README.md  README.rst  setup.cfg
datasets/classical_chinese/: Party_模型原理與中文處理解析.ipynb  hainan_eval_files.txt  yongjia_files.txt  yongjia_train_files.txt
party/: augmentation.py  codec.py  dataset.py  decoder.py  default_specs.py  fusion.py  model.py  pred.py  prompt.py  report.py  rpred.py  t5.py  tokenizer.py  tune.py  util.py
party.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt
party/cli/: __init__.py  pred.py  test.py  train.py  util.py
party/contrib/: parse_miner_xml.py
party/modules/: __init__.py  attention.py  fusion_layer.py  llama_components.py  norms.py  prompt.py  transformer.py
party/template/: llama_party.md
scripts/: batch_party_ocr.sh
train/chinese/: Party_模型原理與中文處理解析.ipynb  hainan_train_files.txt
