[metadata]
name = party
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = foo
home_page = http://kraken.re
long_description = file: README.md 
long_description_content_type = text/markdown; charset=UTF-8
license = Apache
classifier =
        Environment :: Console
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13

keywords =
    htr

[files]
packages = party 

[entry_points]
console_scripts =
    party = party.cli:cli
    party_tune = party.tune:cli

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.9,<3.13
install_requires =
    torch>=2.5.0
    timm
    pillow-jxl-plugin
    python-bidi
    click
    rich
    threadpoolctl
    lightning
    albumentations
    lxml
    pyarrow
    htrmopo~=0.3,>=0.3

[options.extras_require]
pred = 
  kraken @ git+https://github.com/mittagessen/kraken.git@348ff35
